Fix "Trim to current layer" not to use extents() in non-transparent layers

We should calculate real non-default pixel area instead

BUG:344012